# sdl-game

./: CMakeLists.txt  README.md  main.cpp
SDL2-win/include/SDL2/: SDL_assert.h  SDL_audio.h  SDL_clipboard.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_misc.h  SDL_mouse.h  SDL_platform.h  SDL_render.h  SDL_rwops.h  SDL_sensor.h  SDL_system.h  SDL_test_common.h  SDL_ttf.h  SDL_video.h
src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Input.cpp  Input.h  Scene.h  Sprite.h  Text.cpp  Text.h  main.cpp
src/Game/: Game.cpp  Game.h  SceneBase.cpp
src/_old/: AssetManager.cpp  AssetManager.h  Constants.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Input.cpp  Input.h  Scene.h  Sprite.cpp  Sprite.h
src/headers/: animatedsprite.h  game.h  globals.h  graphics.h  input.h  sprite.h
src/sources/: animatedsprite.cpp  game.cpp  graphics.cpp  input.cpp  main.cpp  sprite.cpp
